fix and refine css on span badge spacing

--- a/src/style/main/license.scss
+++ b/src/style/main/license.scss
@@ -44,5 +44,11 @@
 
   .table.custom-style {
     margin-top: 103px;
+
+    span {
+      &:not(:nth-of-type(1)) {
+        margin-left: 0.25rem;
+      }
+    }
   }
 }
